deploy: a5249bf58e8fdf245cd4a421bca8be76a3240089

--- a/solver/bidirectional_search.html
+++ b/solver/bidirectional_search.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Book generated using mdBook -->
     <meta charset="UTF-8">
-    <title>介绍 - 推箱子教程</title>
+    <title>双向搜索 🚧 - 推箱子教程</title>
 
 
     <!-- Custom HTML head -->
@@ -13,21 +13,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="icon" href="favicon.svg">
-    <link rel="shortcut icon" href="favicon.png">
-    <link rel="stylesheet" href="css/variables.css">
-    <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/chrome.css">
-    <link rel="stylesheet" href="css/print.css" media="print">
+    <link rel="icon" href="../favicon.svg">
+    <link rel="shortcut icon" href="../favicon.png">
+    <link rel="stylesheet" href="../css/variables.css">
+    <link rel="stylesheet" href="../css/general.css">
+    <link rel="stylesheet" href="../css/chrome.css">
+    <link rel="stylesheet" href="../css/print.css" media="print">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../fonts/fonts.css">
 
     <!-- Highlight.js Stylesheets -->
-    <link rel="stylesheet" href="highlight.css">
-    <link rel="stylesheet" href="tomorrow-night.css">
-    <link rel="stylesheet" href="ayu-highlight.css">
+    <link rel="stylesheet" href="../highlight.css">
+    <link rel="stylesheet" href="../tomorrow-night.css">
+    <link rel="stylesheet" href="../ayu-highlight.css">
 
     <!-- Custom theme stylesheets -->
 
@@ -37,7 +37,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -90,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html" class="active">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="solver/optimization.html"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="solver/deadlocks.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><a href="solver/bidirectional_search.html"><strong aria-hidden="true">3.4.</strong> 双向搜索 🚧</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> 特征</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="../level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="../level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="../level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="../solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="../solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="../solver/optimization.html"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="../solver/deadlocks.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><a href="../solver/bidirectional_search.html" class="active"><strong aria-hidden="true">3.4.</strong> 双向搜索 🚧</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> 特征</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="../resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="../glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -152,7 +152,7 @@
                     <h1 class="menu-title">推箱子教程</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://github.com/ShenMian/sokoban-tutorial" title="Git repository" aria-label="Git repository">
@@ -186,62 +186,15 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="介绍"><a class="header" href="#介绍">介绍</a></h1>
-<p>本文将描述如何实现一个推箱子 📦, 示例代码使用 Rust 语言 🦀 编写.</p>
-<h2 id="推箱子的起源"><a class="header" href="#推箱子的起源">推箱子的起源</a></h2>
-<p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em>, 字面意思为 "仓库管理员" 👷.<sup class="footnote-reference"><a href="#1">1</a></sup> 英文名为: Sokoban 或 Soukoban.</p>
-<p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
-<p>截至 2024 年, 最新版本推箱子(みんなの倉庫番)于 2019 年 8 月发行于 PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
-<p><img src="assets/everyones_sokoban.jpg" alt="The Sokoban" /></p>
-<p>最新版本的推箱在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
-<h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
-<p>本文以推箱子为案例, 深入浅出的描述软件开发过程. 通过案例讲解有以下目的:</p>
-<ul>
-<li>结合实例的学习可以将<strong>知识</strong>和<strong>应用</strong>结合在一起, 使读者无需被 "学这个有什么用?" 所困扰 🤔.</li>
-<li>提供丰富的实例. 推箱子问题本身还附带了许多子问题, 很适合作为例子使用.</li>
-<li>众多读者对游戏有浓厚的兴趣 🎮.</li>
-</ul>
-<h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
-<p>之所以选择推箱子, 是因为它具有以下特点:</p>
-<ul>
-<li><strong>规则简单</strong>: 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
-<li><strong>基本功能易于实现</strong>: 如推箱子和通关判断.</li>
-<li><strong>有具有挑战的高级功能</strong>: 如纯鼠标控制, 逆推等.</li>
-<li><strong>有需要深入钻研的求解器</strong>: 用于自动求解推箱子关卡.</li>
-</ul>
-<p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
-<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
-<ul>
-<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
-<li>有关高级功能和求解器的章节: 具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
-</ul>
-<h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
-<p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
-但本文<strong>不涉及</strong>以下内容:</p>
-<ul>
-<li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
-<li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变体(Variant)<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
-</ul>
-<h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
-<p>完整的项目代码位于:</p>
-<ul>
-<li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
-<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子实现, 使用 Bevy 引擎.</li>
-</ul>
-<h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
-<p>推荐视频 🎥:</p>
-<ul>
-<li><a href="https://www.bilibili.com/video/BV1Ph41117YT">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>: 该视频详细介绍了推箱子的历史和发展.</li>
-</ul>
-<h2 id="版权"><a class="header" href="#版权">版权</a></h2>
-<p>本文遵循 <a href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0</a> 协议发布. 部分图片来源于互联网, 版权归原作者所有.</p>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
-</div>
-<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p><a href="https://en.wikipedia.org/wiki/Sokoban#Variants">https://en.wikipedia.org/wiki/Sokoban#Variants</a></p>
-</div>
+<h1 id="双向搜索bidirectional-search"><a class="header" href="#双向搜索bidirectional-search">双向搜索(Bidirectional search)</a></h1>
+<p>双向搜索同时从两个方向搜索:</p>
+<ol>
+<li>前向搜索(Forward search): 从初始状态到目标状态, 即原先的搜索方式.</li>
+<li>反向搜索(Backward search): 从目标状态到初始状态, 即逆推.</li>
+</ol>
+<p>相遇时合并二者的路径即可得到解决方案.</p>
+<p>前向搜索遇到的死锁情况在反向搜索中不会遇到, 而反向搜索遇到的死锁情况在前向搜索中不会遇到.<br />
+这是因为反向搜索的路径一定能到达目标状态, 而死锁的状态则一定不能到达目标状态.</p>
 
 
                         <!-- Giscus -->
@@ -255,8 +208,12 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                        <a rel="prev" href="../solver/deadlocks.html" class="mobile-nav-chapters previous"
+                            title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <i class="fa fa-angle-left"></i>
+                        </a>
 
-                        <a rel="next prefetch" href="level/index.html" class="mobile-nav-chapters next"
+                        <a rel="next prefetch" href="../resources.html" class="mobile-nav-chapters next"
                             title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                             <i class="fa fa-angle-right"></i>
                         </a>
@@ -267,8 +224,12 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                <a rel="prev" href="../solver/deadlocks.html" class="nav-chapters previous" title="Previous chapter"
+                    aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <i class="fa fa-angle-left"></i>
+                </a>
 
-                <a rel="next prefetch" href="level/index.html" class="nav-chapters next" title="Next chapter"
+                <a rel="next prefetch" href="../resources.html" class="nav-chapters next" title="Next chapter"
                     aria-label="Next chapter" aria-keyshortcuts="Right">
                     <i class="fa fa-angle-right"></i>
                 </a>
@@ -284,17 +245,17 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="mermaid.min.js"></script>
-        <script src="mermaid-init.js"></script>
+        <script src="../mermaid.min.js"></script>
+        <script src="../mermaid-init.js"></script>
 
 
     </div>
