--- a/print.html
+++ b/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="solver/optimization.html"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="solver/deadlocks.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 双向搜索</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> 特征</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 🚧</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 🚧</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.1.</strong> 搜索策略 🚧</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.2.</strong> 启发式函数 🚧</a></li><li class="chapter-item expanded "><a href="solver/optimization.html"><strong aria-hidden="true">3.3.</strong> 优化</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> 隧道</div></li><li class="chapter-item expanded "><a href="solver/deadlocks.html"><strong aria-hidden="true">3.3.3.</strong> 死锁 🚧</a></li></ol></li><li class="chapter-item expanded "><a href="solver/bidirectional_search.html"><strong aria-hidden="true">3.4.</strong> 双向搜索 🚧</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> 特征</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">5.</strong> 资源 🚧</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 🚧</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -998,7 +998,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 <p>有些关卡为了美观会在原关卡的基础上添加一些装饰, 这些装饰性的元素在本质上并<strong>不影响关卡的解法</strong>.<br />
 标准化的目的是移除这些与求解<strong>无关或冗余</strong>的元素.</p>
 <p>理想状态下, 任何具有相同步数最优解的关卡都可以被标准化为同一个关卡. 理论上可以先对关卡解析自动求解, 获得最优解决方案后再<a href="level/parse_level.html#%E4%BB%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%E6%9E%84%E9%80%A0%E5%85%B3%E5%8D%A1">从解决方案构造关卡</a>来得到标准化后的关卡.<br />
-但对于 NP 难<sup class="footnote-reference"><a href="#1">1</a></sup>的推箱子问题来说, 自动求解最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的高效(多项式时间内得出结果)标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
+但对于 PSPACE-complete 的推箱子问题来说, 自动求解最优解决方案通常是耗时且困难的, 因此还需要一种不依赖于关卡解决方案的高效(多项式时间内得出结果)标准化方法. 尽管该方法得到的标准化结果并不完美.</p>
 <p>关卡的标准化可以分为以下几个步骤:</p>
 <ol>
 <li>
@@ -1062,9 +1062,6 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 ###
 </code></pre>
 <p>这是一个最简单的非标准关卡, 因为其没有箱子和目标, 解为空.</p>
-<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p><a href="https://www.sciencedirect.com/science/article/pii/S0925772199000176">https://www.sciencedirect.com/science/article/pii/S0925772199000176</a></p>
-</div>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="求解器solver"><a class="header" href="#求解器solver">求解器(Solver)</a></h1>
 <p>顾名思义, 求解器是用于自动求解推箱子关卡的程序.</p>
@@ -1479,6 +1476,16 @@ lower_bounds
 <ul>
 <li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a></li>
 </ul>
+<div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
+<h1 id="双向搜索bidirectional-search"><a class="header" href="#双向搜索bidirectional-search">双向搜索(Bidirectional search)</a></h1>
+<p>双向搜索同时从两个方向搜索:</p>
+<ol>
+<li>前向搜索(Forward search): 从初始状态到目标状态, 即原先的搜索方式.</li>
+<li>反向搜索(Backward search): 从目标状态到初始状态, 即逆推.</li>
+</ol>
+<p>相遇时合并二者的路径即可得到解决方案.</p>
+<p>前向搜索遇到的死锁情况在反向搜索中不会遇到, 而反向搜索遇到的死锁情况在前向搜索中不会遇到.<br />
+这是因为反向搜索的路径一定能到达目标状态, 而死锁的状态则一定不能到达目标状态.</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
 <ul>
