--- a/print.html
+++ b/print.html
@@ -1404,7 +1404,7 @@ lower_bounds
 <ol>
 <li>
 <p><strong>静态死锁</strong>: 这种死锁与箱子和玩家的位置无关, 可以在只知道关卡地形和目标位置的情况下进行计算.<br />
-标位置是静态的, 而关卡地形可能发生变化. 比如当箱子被推到目标后死锁了, 此时可以将死锁的箱子视为不可移动的墙, 关卡地形发生变化, 需要重新计算.<br />
+标位置是静态的, 而关卡地形可能发生变化. 比如当箱子被推到目标后死锁了, 此时可已将死锁的箱子视为不可移动的墙, 关卡地形发生变化, 需要重新计算.<br />
 因为地形变化只能增加墙体, 使死区变多, 所以即使不重新计算也不会产生错误, 但会使静态死锁检测不全面.</p>
 <p><img src="solver/assets/static_deadlock.png" alt="Static deadlock - Sokoban Wiki" /></p>
 </li>
