--- a/solver/index.html
+++ b/solver/index.html
@@ -370,7 +370,7 @@ impl PartialOrd for Node {
 <p><a href="https://en.wikipedia.org/wiki/Iterative_deepening_A*">https://en.wikipedia.org/wiki/Iterative_deepening_A*</a></p>
 </div>
 <div class="footnote-definition" id="5"><sup class="footnote-definition-label">5</sup>
-<p><a href="https://ieeexplore.ieee.org/document/9231929">https://ieeexplore.ieee.org/document/9231929</a></p>
+<p><a href="https://ieeexplore.ieee.org/document/9231929">Y. Shoham and J. Schaeffer, "The FESS Algorithm: A Feature Based Approach to Single-Agent Search," 2020 IEEE Conference on Games (CoG), Osaka, Japan, 2020, pp. 96-103, doi: 10.1109/CoG47356.2020.9231929</a></p>
 </div>
 <div class="footnote-definition" id="6"><sup class="footnote-definition-label">6</sup>
 <p><a href="https://festival-solver.site/">https://festival-solver.site/</a></p>
