--- a/print.html
+++ b/print.html
@@ -192,7 +192,7 @@
 <h2 id="推箱子的起源"><a class="header" href="#推箱子的起源">推箱子的起源</a></h2>
 <p>推箱子在 1981 年由日本人今林宏行(いまばやし ひろゆき)所创造, 第一个版本于 1982 年 12 月发行, 名为<em>仓库番</em>, 字面意思为 "仓库管理员" 👷.<sup class="footnote-reference"><a href="#1">1</a></sup> 英文名为: Sokoban 或 Soukoban.</p>
 <p><img src="assets/first_sokoban_15.png" alt="First Sokoban #15" /></p>
-<p>截至 2024 年, 最新版本推箱子(みんなの倉庫番)于 2019 年 8 月发行于 PlayStation 4 平台.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
+<p>截至 2024 年, 最新版本推箱子(みんなの倉庫番)于 2019 年 8 月在 PlayStation 4 平台发行.<sup class="footnote-reference"><a href="#1">1</a></sup></p>
 <p><img src="assets/everyones_sokoban.jpg" alt="The Sokoban" /></p>
 <p>最新版本的推箱子在角色控制方面相较于其最初的版本并未见明显改进, 本文后续将介绍一种纯鼠标控制的角色控制方法 🖱️.</p>
 <h2 id="为什么通过案例来讲解"><a class="header" href="#为什么通过案例来讲解">为什么通过案例来讲解</a></h2>
@@ -228,7 +228,7 @@
 <p>完整的项目代码位于:</p>
 <ul>
 <li><a href="https://github.com/shenmian/soukoban">ShenMian/soukoban</a>: 推箱子相关算法实现.</li>
-<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 推箱子实现, 使用 Bevy 引擎.</li>
+<li><a href="https://github.com/shenmian/sokoban-rs">ShenMian/sokoban-rs</a>: 基于 Bevy 引擎的推箱子实现.</li>
 </ul>
 <h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
 <p>推荐视频 🎥:</p>
