deploy: a605598e52fed47d9e1de3140c9dbd87d7decd72

--- a/print.html
+++ b/print.html
@@ -552,10 +552,10 @@ pub struct Level {
 <pre class="mermaid">flowchart LR
     A[包含多个关卡的字符串] --&gt;|Level::to_group| B
     B[包含单个关卡的字符串] --&gt; C{是否经过\n RLE 压缩?}
-    C --&gt;|是| D[使用 RLE 解压字符串]
+    C --&gt;|是| D[RLE 压缩字符串]
     C --&gt;|否| E
     D --&gt;|rle_decode| E
-    E[XSB 压缩字符串]
+    E[XSB 字符串]
 </pre>
 <h3 id="多个关卡之间的分割"><a class="header" href="#多个关卡之间的分割">多个关卡之间的分割</a></h3>
 <p>定义关联函数 <code>Level::to_groups</code>, 接受包含多个关卡的字符串, 返回包含单个关卡的字符串切片的迭代器.</p>
