--- a/glossary_of_terms.html
+++ b/glossary_of_terms.html
@@ -191,8 +191,13 @@
 <tr><td>求解器</td><td>solver</td></tr>
 <tr><td>解决方案/解</td><td>solution</td></tr>
 <tr><td>动作</td><td>action</td></tr>
+<tr><td>容器<sup class="footnote-reference"><a href="#1">1</a></sup></td><td>collection</td></tr>
 </tbody></table>
 </div>
+<div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
+<p><code>collection</code> 被翻译为 "容器", 延用了 C++ 中的叫法. 不译为 "集合" 是为了防止与集合 "set" 混淆.</p>
+</div>
+
 
                         <!-- Giscus -->
                         <script src="https://giscus.app/client.js" data-repo="ShenMian/sokoban-tutorial"
