--- a/solver/index.html
+++ b/solver/index.html
@@ -246,6 +246,7 @@
     pub box_positions: HashSet&lt;Vector2&lt;i32&gt;&gt;,
 }
 </code></pre>
+<p>其中 <code>box_positions</code> 使用容器 <code>HashSet</code> 存储是因为箱子位置没有顺序关系, 且不会重复. 相较于常用的 <code>Vec</code> 容器, 它能更快的进行比较和查找.</p>
 <p>实现从 <code>Map</code> 到 <code>State</code> 的转换:</p>
 <pre><code class="language-rs">impl From&lt;Map&gt; for State {
     fn from(map: Map) -&gt; Self {
