deploy: 08ffa2cbe3be56b5cfd6d98aa423e1c332a8a36b

--- a/level/api_design.html
+++ b/level/api_design.html
@@ -198,19 +198,23 @@
 <li><code>Actions</code>: 存储玩家的动作, 包括动作的类型(移动或推动), 以及方向(上下左右).</li>
 <li><code>Level</code>: 关卡, 包含地图和玩家动作. 可以执行或撤销动作.</li>
 </ul>
-<p>!!! info
-<code>Map</code> 的数组是否应该包含玩家和箱子元素?</p>
-<pre><code>- 包含:
-    - 在修改玩家位置或移动箱子时, 需要同步数组中的数据. 可能引入导致数据不一致的 BUG. 但因为实现十分简单, 因此引入 BUG 的可能性不大.
-    - 存在数据冗余, 但是冗余的数据量很小, 不至于造成显著的内存占用率变化.
-- 不包含: 读取时需要判断是否与玩家或任意箱子的位置相同, 如果有就追加相关元素的枚举值. 导致读取比写入有更大的开销. 取比写入开销大违反直觉, 可能使调用者感到意外.
-
-综上所述, 本文倾向于在数组里包含这些元素.
-</code></pre>
-<p>!!! info
-<code>Map</code> 的数组应该是一维的还是二维的?</p>
-<pre><code>由于该数组是动态数组, 二维动态数组的分配与释放需要更大的开销. 而使用一维动态数组, 内存布局会更加紧凑, 且可以通过一个简单的函数封装来直接使用二维坐标读取地图内容. 因此使用一维数组更为合适.
-</code></pre>
+<blockquote>
+<p><code>Map</code> 的数组是否应该包含玩家和箱子元素?</p>
+<ul>
+<li>包含:
+<ul>
+<li>在修改玩家位置或移动箱子时, 需要同步数组中的数据. 可能引入导致数据不一致的 BUG. 但因为实现十分简单, 因此引入 BUG 的可能性不大.</li>
+<li>存在数据冗余, 但是冗余的数据量很小, 不至于造成显著的内存占用率变化.</li>
+</ul>
+</li>
+<li>不包含: 读取时需要判断是否与玩家或任意箱子的位置相同, 如果有就追加相关元素的枚举值. 导致读取比写入有更大的开销. 取比写入开销大违反直觉, 可能使调用者感到意外.</li>
+</ul>
+<p>综上所述, 本文倾向于在数组里包含这些元素.</p>
+</blockquote>
+<blockquote>
+<p><code>Map</code> 的数组应该是一维的还是二维的?</p>
+<p>由于该数组是动态数组, 二维动态数组的分配与释放需要更大的开销. 而使用一维动态数组, 内存布局会更加紧凑, 且可以通过一个简单的函数封装来直接使用二维坐标读取地图内容. 因此使用一维数组更为合适.</p>
+</blockquote>
 <p>它们之间的转换关系如下:</p>
 <pre class="mermaid">flowchart LR
     A[String] --&gt;|XSB 格式| B[Map]
