deploy: ec54265709f4a8144aa55ca9ebd811e71501e331

--- a/solver/index.html
+++ b/solver/index.html
@@ -440,8 +440,8 @@ impl PartialOrd for Node {
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../mermaid.min.js"></script>
-        <script src="../mermaid-init.js"></script>
+        <script src="../assets/mermaid.min.js"></script>
+        <script src="../assets/mermaid-init.js"></script>
 
 
     </div>
