--- a/level/index.html
+++ b/level/index.html
@@ -470,8 +470,8 @@ ___HHH__
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../mermaid.min.js"></script>
-        <script src="../mermaid-init.js"></script>
+        <script src="../assets/mermaid.min.js"></script>
+        <script src="../assets/mermaid-init.js"></script>
 
 
     </div>
