--- a/level/normalization.html
+++ b/level/normalization.html
@@ -313,8 +313,8 @@
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../mermaid.min.js"></script>
-        <script src="../mermaid-init.js"></script>
+        <script src="../assets/mermaid.min.js"></script>
+        <script src="../assets/mermaid-init.js"></script>
 
 
     </div>
