--- a/level/representation.html
+++ b/level/representation.html
@@ -318,8 +318,8 @@ pub struct Level {
         <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../mermaid.min.js"></script>
-        <script src="../mermaid-init.js"></script>
+        <script src="../assets/mermaid.min.js"></script>
+        <script src="../assets/mermaid-init.js"></script>
 
 
     </div>
