--- a/print.html
+++ b/print.html
@@ -1677,8 +1677,8 @@ lower_bounds
         <script src="book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="mermaid.min.js"></script>
-        <script src="mermaid-init.js"></script>
+        <script src="assets/mermaid.min.js"></script>
+        <script src="assets/mermaid-init.js"></script>
 
         <script>
             window.addEventListener('load', function () {
