--- a/print.html
+++ b/print.html
@@ -1602,6 +1602,10 @@ lower_bounds
 <h2 id="闭对角死锁closed-diagonal-deadlocks"><a class="header" href="#闭对角死锁closed-diagonal-deadlocks">闭对角死锁(Closed diagonal deadlocks)</a></h2>
 <p><img src="solver/assets/closed_diagonal_deadlock.png" alt="Closed diagonal deadlock - Sokoban Wiki" /></p>
 <p>其中畜栏死锁和闭对角死锁是更高级的冻结死锁, 因为这类死锁最终会转变为冻结死锁.</p>
+<h2 id="参考-2"><a class="header" href="#参考-2">参考</a></h2>
+<ul>
+<li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a>.</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="双向搜索bidirectional-search"><a class="header" href="#双向搜索bidirectional-search">双向搜索(Bidirectional search)</a></h1>
 <p>双向搜索同时从两个方向搜索:</p>
