deploy: f89eed0aea31f566a528251ebfdc8a61c74c12e4

--- a/solver/deadlocks_v2.html
+++ b/solver/deadlocks_v2.html
@@ -187,6 +187,8 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="死锁deadlock"><a class="header" href="#死锁deadlock">死锁(Deadlock)</a></h1>
+<p>!!! info
+本文中的死锁示例图片来源于 <a href="http://sokobano.de/wiki">http://sokobano.de/wiki</a>.</p>
 <p>箱子在被推动到某个位置后, 再也无法被推动. 这种情况被称之为死锁. 如果此时被死锁的箱子不在目标上, 意味着该箱子后续无法被推动至目标上, 导致无法通关.</p>
 <h2 id="为什么要检测死锁"><a class="header" href="#为什么要检测死锁">为什么要检测死锁</a></h2>
 <ol>
