--- a/solver/deadlocks.html
+++ b/solver/deadlocks.html
@@ -187,6 +187,8 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="死锁deadlock"><a class="header" href="#死锁deadlock">死锁(Deadlock)</a></h1>
+<p>!!! info
+本文中的死锁示例图片来源于 <a href="http://sokobano.de/wiki">http://sokobano.de/wiki</a>.</p>
 <h2 id="what"><a class="header" href="#what">什么是死锁</a></h2>
 <p>推箱子的通关条件是每个箱子都被推至一个目标位置. 但在一些情况下, 箱子永远不能再被推到目标上(比如箱子被推入不是目标的死角), 导致无法通关. 这种情况称之为死锁.</p>
 <h2 id="why"><a class="header" href="#why">为什么要检测死锁</a></h2>
@@ -205,7 +207,7 @@
 <p><strong>静态死锁</strong>: 这种死锁与箱子和玩家的位置无关, 可以在只知道关卡地形和目标位置的情况下进行计算.<br />
 标位置是静态的, 而关卡地形可能发生变化. 比如当箱子被推到目标后死锁了, 此时可已将死锁的箱子视为不可移动的墙, 关卡地形发生变化, 需要重新计算.<br />
 因为地形变化只能增加墙体, 使死区变多, 所以即使不重新计算也不会产生错误, 但会使静态死锁检测不全面.</p>
-<p><img src="assets/static_deadlock.png" alt="Static deadlock - Sokoban Wiki" /></p>
+<p><img src="assets/static_deadlock_1.png" alt="Static deadlock - Sokoban Wiki" /></p>
 </li>
 <li>
 <p><strong>冻结死锁(Freeze deadlocks)</strong>: 这种死锁产生的原因是箱子和墙或箱子之间的相互阻碍导致多个箱子同时死锁.<br />
@@ -276,7 +278,7 @@
 </code></pre>
 <h2 id="参考"><a class="header" href="#参考">参考</a></h2>
 <ul>
-<li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a></li>
+<li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a>.</li>
 </ul>
 
 
