deploy: 2c56f7077871801a5db0cb064588981cfc0e8ca4

--- a/print.html
+++ b/print.html
@@ -1499,7 +1499,8 @@ lower_bounds
 <ol>
 <li>
 <p>优化求解器: 可以在搜索时进行可行性剪枝.</p>
-<p>若被死锁的箱子不在目标上, 那么该状态及其衍生状态一定无解. 求解器可以跳过这些无意义的搜索.</p>
+<p>若被死锁的箱子不在目标上, 那么该状态及其衍生状态一定无解.<br />
+部分死锁存在特定的模式, 可以通过较小的代价进行检测, 从而使求解器跳过无意义的搜索.</p>
 </li>
 <li>
 <p>提升玩家体验: 可以警告或防止玩家产生死锁状态.</p>
