--- a/solver/deadlocks.html
+++ b/solver/deadlocks.html
@@ -280,6 +280,7 @@
 <h2 id="参考"><a class="header" href="#参考">参考</a></h2>
 <ul>
 <li><a href="http://sokobano.de/wiki/index.php?title=Deadlocks">http://sokobano.de/wiki/index.php?title=Deadlocks</a>.</li>
+<li><a href="http://sokobano.de/wiki/index.php?title=How_to_detect_deadlocks">http://sokobano.de/wiki/index.php?title=How_to_detect_deadlocks</a>.</li>
 </ul>
 
 
